--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,6 +10,11 @@
         android:icon="@drawable/contador" />
 
     <item
+        android:id="@+id/navigation_api"
+        android:title="Api"
+        android:icon="@drawable/info" />
+
+    <item
         android:id="@+id/navigation_salir"
         android:title="Salir"
         android:icon="@drawable/ic_exit" />
